# Kepler

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Kepler.cbp  Kepler.db  README.md  build.sh  config.ini  docker-compose.yml  docker-entrypoint.sh  icarus.properties  kepler.sql  locale.ini  log4j.properties  messenger_requests.csv  readme.md  settings.gradle
Kepler-Server/: build.gradle
Kepler-Server/src/test/java/: RollerTest.java
data/: external_texts.txt
db/: schema.sql
db/migrations/: 20180605205011_create_items_definitions.sql  20180605205405_create_messenger_friends.sql  20180605205543_create_messenger_messages.sql  20180605205848_create_messenger_requests.sql  20180605210128_create_rank_fuserights.sql  20180605210848_create_users.sql  20180605211041_create_users_room_favourites.sql  20180605211154_create_users_room_votes.sql  20180605211259_create_indexes.sql  20180605211518_create_auto_increments.sql  20180609193613_create_soundmachine_playlists.sql  20180610045026_create_site_settings.sql  20180610071051_soundmachine_column_settings.sql  20180610084935_fix_tv_luxus_behaviour.sql
src/: main.c  main.h  shared.c  shared.h
src/communication/: message_handler.c  message_handler.h
src/communication/incoming/: InitCryptoMessageEvent.h  LoginMessageEvent.h  NavigatorMessageEvent.h  SecretKeyMessageEvent.h  UserInfoMessageEvent.h  VERSIONCHECK.h
src/communication/incoming/catalogue/: GCAP.h  GCIX.h  GET_ALIAS_LIST.h  GRPC.h
src/communication/incoming/inventory/: GETSTRIP.h
src/communication/incoming/login/: GDATE.h  GENERATEKEY.h  INIT_CRYPTO.h  InitCryptoMessageEvent.h  LoginMessageEvent.h  PONG.h  SSO.h  SecretKeyMessageEvent.h  TRY_LOGIN.h  UserInfoMessageEvent.h
src/communication/messages/: incoming_message.c  incoming_message.h  outgoing_message.c  outgoing_message.h
src/database/: db_connection.c  db_connection.h  mysql_connection.c  mysql_connection.h
src/database/queries/: catalogue_query.c  catalogue_query.h  furniture_query.c  item_query.c  item_query.h  messenger_query.c  messenger_query.h  player_query.c  player_query.h  room_query.c  room_query.h  room_user_query.c  room_user_query.h
src/game/: game_thread.c  game_thread.h
src/game/catalogue/: catalogue_item.c  catalogue_item.h  catalogue_manager.c  catalogue_manager.h  catalogue_package.c  catalogue_page.c  catalogue_page.h
src/game/club/: club_manager.c  club_manager.h
src/game/inventory/: inventory.c  inventory.h
src/game/items/: item.c  item.h  item_definition.c  item_definition.h  item_manager.c  item_manager.h  items.c  items.h  items_data_parser.c
src/game/messenger/: messenger.c  messenger.h  messenger_entry.c  messenger_friend.c  messenger_friend.h
src/game/moderation/: fuserights_manager.c  fuserights_manager.h
src/game/navigator/: navigator_category.c  navigator_category.h  navigator_category_manager.c  navigator_category_manager.h
src/game/pathfinder/: affected_tiles.c  coord.c  coord.h  node.c  node.h  pathfinder.c  pathfinder.h  rotation.c  rotation.h
src/game/player/: player.c  player.h  player_manager.c  player_manager.h  player_refresh.c  player_refresh.h
src/game/room/: room.c  room.h  room_category_manager.c  room_category_manager.h  room_manager.c  room_manager.h  room_model.c  room_model.h  room_model_manager.c  room_model_manager.h  room_task.c  room_task.h  room_user.c  room_user.h
src/game/texts/: external_texts_manager.c  external_texts_manager.h
src/lib/: log.c  log.h
src/lib/cthreadpool/: thpool.c
src/lib/dispatch/: dispatch.c  dispatch.h
src/lib/dyad/: dyad.c  dyad.h
src/server/: server_listener.c  server_listener.h
src/server/rcon/: rcon_handler.c  rcon_handler.h  rcon_listener.c  rcon_listener.h
src/util/: stringbuilder.c  stringbuilder.h  threading.c  threading.h
src/util/configuration/: configuration.c  configuration.h
src/util/encoding/: base64encoding.c  base64encoding.h  vl64encoding.c  vl64encoding.h
src/util/encryption/: RC4.c  RC4.h  ciphering.c  ciphering.h
tools/: kepler.sql
tools/db/: schema.sql
tools/db/migrations/: 20180605202455_create_catalogue_items.sql  20180605202822_create_catalogue_packages.sql  20180605203204_create_catalogue_pages.sql  20180605204755_create_items.sql  20180605210255_create_rooms.sql  20180605210408_create_rooms_categories.sql  20180605210538_create_rooms_models.sql  20180605210954_create_users_badges.sql  20180609193613_create_soundmachine_playlists.sql  20180709204129_pedobear_poster_sprite_change.sql  20180710085729_pedobear_poster_sprite_change.sql  20180715121437_decouple_club_rank.sql  20180729161108_fix_furniture_heights.sql  20180730120357_fix_public_rooms.sql  20180730181820_call_for_help_fuses.sql  20180730181828_the_tool_fuses.sql  20180807132707_fix_gamehall_doors.sql  20180810204747_add_moderation_logs.sql  20180811003742_add_public_furniture.sql  20180811023946_add_external_texts.sql  20180814105730_add_rares_mixed_plus_inflated_chairs.sql  20180816105820_add_model_triggers.sql  20180818032804_misc_fix_public_rooms.sql  20180826011235_add_game_tables.sql  20180915211843_add_executive_furniture.sql  20180916030415_add_alhambra_furniture.sql
tools/gamedata/: external_texts.txt
(+747 files in other folders)
